--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "halpert-hal-json",
   "version": "0.1.0",
   "description": "Halpert HAL+JSON",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "gulp mocha"
   },
@@ -30,7 +30,8 @@
     "gulp-util": "~2.2.14",
     "gulp-grep-stream": "0.0.2",
     "gulp-plumber": "~0.6.2",
-    "coffee-script": "~1.7.1"
+    "coffee-script": "~1.7.1",
+    "gulp-coffeelint": "~0.3.3"
   },
   "dependencies": {
     "lodash": "~2.4.1",
