--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "halpert-hal-json",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Halpert HAL+JSON",
   "main": "lib/index.js",
   "scripts": {
-    "test": "gulp mocha"
+    "test": "gulp test"
   },
   "keywords": [
     "halpert",
